# kv-squeeze

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: eviction.rs  lib.rs  main.rs  quantize.rs  simulator.rs
